--- a/anvil.yaml
+++ b/anvil.yaml
@@ -142,4 +142,39 @@ db_schema:
       admin_ui: {width: 200, order: 12}
       type: string
     title: manage_products
+  loan_details:
+    client: none
+    server: full
+    columns:
+    - name: customer_id
+      admin_ui: {width: 200, order: 0}
+      type: number
+    - name: email_id
+      admin_ui: {width: 200, order: 1}
+      type: string
+    - name: full_name
+      admin_ui: {width: 200, order: 2}
+      type: string
+    - name: interest_rate
+      admin_ui: {width: 200, order: 3}
+      type: number
+    - name: loan_id
+      admin_ui: {width: 200, order: 4}
+      type: number
+    - name: loan_status
+      admin_ui: {width: 200, order: 5}
+      type: bool
+    - name: max_amount
+      admin_ui: {width: 200, order: 6}
+      type: number
+    - name: min_amount
+      admin_ui: {width: 200, order: 7}
+      type: number
+    - name: 'tenure '
+      admin_ui: {width: 200, order: 8}
+      type: number
+    - name: 'total_repayment '
+      admin_ui: {width: 200, order: 9}
+      type: number
+    title: loan_details
 renamed: true
