Edited log_in_form.Form4 and settings

--- a/anvil.yaml
+++ b/anvil.yaml
@@ -143,7 +143,7 @@ db_schema:
       type: string
     title: manage_products
   loan_details:
-    client: none
+    client: full
     server: full
     columns:
     - name: customer_id
