--- a/client_code/log_in_form/Form4/form_template.yaml
+++ b/client_code/log_in_form/Form4/form_template.yaml
@@ -142,6 +142,7 @@ components:
     properties: {text: button_3}
     name: button_3
     layout_properties: {grid_position: 'HJBXVS,CVNJWZ'}
+    event_bindings: {click: button_3_click}
 - type: FlowPanel
   properties: {}
   name: navbar_links
