--- a/anvil.yaml
+++ b/anvil.yaml
@@ -177,4 +177,15 @@ db_schema:
       admin_ui: {order: 9, width: 200}
       type: number
     title: loan_details
+  lender:
+    client: none
+    server: full
+    columns:
+    - name: coustmer_id
+      admin_ui: {width: 200, order: 0}
+      type: number
+    - name: email_id
+      admin_ui: {width: 200, order: 1}
+      type: string
+    title: lender
 renamed: true
