--- a/anvil.yaml
+++ b/anvil.yaml
@@ -181,8 +181,8 @@ db_schema:
     client: none
     server: full
     columns:
-    - name: coustmer_id
-      admin_ui: {width: 200, order: 0}
+    - name: customer_id
+      admin_ui: {order: 0, width: 200}
       type: number
     - name: email_id
       admin_ui: {width: 200, order: 1}
