Created log_in_form.Home.borrowers.Form10, log_in_form.Home.borrowers.Form6, log_in_form.Home.borrowers.Form7, log_in_form.Home.borrowers.Form8 and 3 more

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -5,6 +5,7 @@ unique_ids:
     log_in_form.Form1: '1699943579867413313469593.5397'
     log_in_form.Home.loan_management.manual_disbursement: '1699007388935189643074159.93286'
     log_in_form.Form1.Form2: '1699961036001388308810374.82135'
+    log_in_form.Home.borrowers.Form8: '170012518227069608206066.96938'
     log_in_form.Home.loan_management.closed_loans: '169900757260896211433440.56126'
     log_in_form.Form4: '1699972136130872047615135.9475'
     log_in_form.Home.manage_settings.manage_facts.facts_edit_form: '1699431545406557144363579.9729'
@@ -12,9 +13,12 @@ unique_ids:
     log_in_form.Home: '169838228559032231040135.46263'
     log_in_form.Home.manage_settings.manage_facts: '1699008960083449252857088.74243'
     log_in_form.Home.loan_management.npa_form: '1699007541594815950811282.3915'
+    log_in_form.Home.borrowers.Form6: '1700125087238652600719232.1868'
     log_in_form.Home.loan_management.ots_form: '1699007619743656257377013.5234'
+    log_in_form.Home.borrowers.update: '1700125397431298786318844.1817'
     log_in_form: GUGLRS4VVV3FBLZUMSK4OE75PW55BHQW
     log_in_form.Home.manage_settings.manage_membership: '1699008921737741791321030.3928'
+    log_in_form.Home.borrowers.Form10: '1700125253376541793405586.8381'
     log_in_form.Home.loan_management: '1698510496370567653860910.7308'
     Log_in_Home.Form5: '1700119015234218326793980.04218'
     log_in_form.Home.loan_management.loan_disbursed: '1699007343401922839978054.3939'
@@ -25,18 +29,21 @@ unique_ids:
     log_in_form.Home.admin_teams.view_profile.update_form: '1698899789994986117374399.0231'
     log_in_form.Home.manage_settings: '1698510570970805808175551.8953'
     log_in_form.Home.loan_management.lost_opportunities: '1699007461719824130369412.9452'
+    log_in_form.Home.borrowers.Form7: '1700125149174798260451006.7322'
     log_in_form.Home.admin_teams: '1698750803552258359376441.58456'
     Log_in_Home: '1698727115891669303119860.9404'
     log_in_form.Home.manage_products: '1698510531650695240800375.4204'
     log_in_form.Home.loan_management.lapsed: '169900766496418104210797.048603'
     log_in_form.Home.manage_settings.manage_roi: '1698728518958724320447228.9803'
     log_in_form.Home.manage_settings.manage_fee.fee_edit_form: '1699363428965272828870498.47583'
+    log_in_form.Home.borrowers.Form9: '1700125226414395175805049.5451'
     log_in_form.Home.admin_teams.view_profile.edit_form: '1698907575731908465721374.0109'
     log_in_form.Home.risk_pool: '1698510663776338046362020.20764'
     log_in_form.Home.borrowers: '1698510391677311917004052.9009'
     log_in_form.Home.loan_management.defaulters: '1699007677809133269078101.18561'
     log_in_form.Home.loan_management.under_process: '1699007519934382529687066.75116'
     log_in_form.Home.manage_settings.manage_fee: '1699008892498722156546612.8901'
+    log_in_form.Home.borrowers.edit: '1700125275735422656269486.72394'
     log_in_form.Home.lenders: '1698510463208765568412581.0891'
   modules: {}
   server_modules:
