Created log_in_form.Home.manage_cms.edit and log_in_form.Home.manage_cms.update; Edited log_in_form.Home.manage_cms and log_in_form.Home.borrowers

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -6,6 +6,7 @@ unique_ids:
     log_in_form.Home.loan_management.manual_disbursement: '1699007388935189643074159.93286'
     log_in_form.Form1.Form2: '1699961036001388308810374.82135'
     log_in_form.Home.borrowers.Form8: '170012518227069608206066.96938'
+    log_in_form.Home.manage_cms.edit: '1700208830761148321592340.13086'
     log_in_form.Home.loan_management.closed_loans: '169900757260896211433440.56126'
     log_in_form.Form4: '1699972136130872047615135.9475'
     log_in_form.Home.manage_settings.manage_facts.facts_edit_form: '1699431545406557144363579.9729'
@@ -30,6 +31,7 @@ unique_ids:
     log_in_form.Home.manage_settings: '1698510570970805808175551.8953'
     log_in_form.Home.loan_management.lost_opportunities: '1699007461719824130369412.9452'
     log_in_form.Home.borrowers.Form7: '1700125149174798260451006.7322'
+    log_in_form.Home.manage_cms.update: '1700208899567327850489516.46844'
     log_in_form.Home.admin_teams: '1698750803552258359376441.58456'
     Log_in_Home: '1698727115891669303119860.9404'
     log_in_form.Home.manage_products: '1698510531650695240800375.4204'
