--- a/client_code/Log_in_Home/Form11/form_template.yaml
+++ b/client_code/Log_in_Home/Form11/form_template.yaml
@@ -315,19 +315,19 @@ components:
             properties: {role: null, selected: false, align: left, tooltip: '', border: '',
               enabled: true, foreground: '', value: '', visible: true, text: 'Yes',
               font_size: null, font: '', spacing_above: small, spacing_below: small,
-              italic: false, background: '', bold: false, group_name: radioGroup1,
+              italic: false, background: '', bold: false, group_name: radioGroup2,
               underline: false}
             name: radio_button_3
-            layout_properties: {x: 177, y: 797.7999877929688, width: 67}
+            layout_properties: {x: 177.00000762939453, y: 797.7999877929688, width: 67}
             event_bindings: {clicked: radio_button_3_clicked}
           - type: RadioButton
             properties: {role: null, selected: false, align: left, tooltip: '', border: '',
               enabled: true, foreground: '', value: '', visible: true, text: 'NO',
               font_size: null, font: '', spacing_above: small, spacing_below: small,
-              italic: false, background: '', bold: false, group_name: radioGroup1,
+              italic: false, background: '', bold: false, group_name: radioGroup2,
               underline: false}
             name: radio_button_4
-            layout_properties: {x: 266, y: 797.7999877929688, width: 58}
+            layout_properties: {x: 266.00000762939453, y: 797.7999877929688, width: 58}
           - type: CheckBox
             properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
               foreground: '', allow_indeterminate: false, visible: true, text: ATL-NL-69-indepndence-pf(10% off on processing fee),
@@ -335,6 +335,7 @@ components:
               italic: false, background: '', bold: false, checked: false, underline: false}
             name: check_box_1
             layout_properties: {x: 177, y: 857.2000122070312, width: 443}
+            event_bindings: {change: check_box_1_change}
           - type: CheckBox
             properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
               foreground: '', allow_indeterminate: false, visible: true, text: ATL-NL-69-indepndence-RO(10% off on interest),
