--- a/client_code/Log_in_Home/Form11/form_template.yaml
+++ b/client_code/Log_in_Home/Form11/form_template.yaml
@@ -359,6 +359,14 @@ components:
               underline: false}
             name: text_box_3
             layout_properties: {x: 177, y: 363.8000183105469, width: 232}
+          - type: CheckBox
+            properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
+              foreground: '', allow_indeterminate: false, visible: true, text: Product Visibility,
+              font_size: null, font: '', spacing_above: small, spacing_below: small,
+              italic: false, background: '', bold: false, checked: false, underline: false}
+            name: check_box_3
+            layout_properties: {x: 520, y: 10, width: 165}
+            event_bindings: {change: check_box_3_change}
 - type: FlowPanel
   properties: {}
   name: navbar_links
