--- a/client_code/Log_in_Home/Form11/form_template.yaml
+++ b/client_code/Log_in_Home/Form11/form_template.yaml
@@ -363,7 +363,7 @@ components:
             properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
               foreground: '', allow_indeterminate: false, visible: true, text: Product Visibility,
               font_size: null, font: '', spacing_above: small, spacing_below: small,
-              italic: false, background: '', bold: false, checked: false, underline: false}
+              italic: false, background: '', bold: false, checked: true, underline: false}
             name: check_box_3
             layout_properties: {x: 520, y: 10, width: 165}
             event_bindings: {change: check_box_3_change}
