--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -41,6 +41,7 @@ unique_ids:
     log_in_form.Home.manage_settings.manage_fee.fee_edit_form: '1699363428965272828870498.47583'
     log_in_form.Home.borrowers.Form9: '1700125226414395175805049.5451'
     log_in_form.Home.admin_teams.view_profile.edit_form: '1698907575731908465721374.0109'
+    log_in_form.Home.manage_cms.row: '1700642248315520962979899.10156'
     log_in_form.Home.risk_pool: '1698510663776338046362020.20764'
     log_in_form.Home.borrowers: '1698510391677311917004052.9009'
     log_in_form.Home.loan_management.defaulters: '1699007677809133269078101.18561'
