--- a/anvil.yaml
+++ b/anvil.yaml
@@ -4,7 +4,7 @@ services:
 - source: /runtime/services/tables.yml
   client_config: {}
   server_config: {}
-startup: {type: form, module: Log_in_Home.Form11}
+startup: {type: form, module: Log_in_Home}
 package_name: Admin_app
 allow_embedding: false
 name: admin-app-main
