--- a/client_code/log_in_form/Home/manage_products/update_form/form_template.yaml
+++ b/client_code/log_in_form/Home/manage_products/update_form/form_template.yaml
@@ -4,7 +4,7 @@ container:
   properties: {html: '@theme:standard-page.html'}
 components:
 - type: ColumnPanel
-  properties: {}
+  properties: {col_widths: '{}'}
   name: content_panel
   layout_properties: {slot: default}
   components:
@@ -13,7 +13,7 @@ components:
     name: column_panel_1_copy
     layout_properties:
       col_widths: {}
-      grid_position: PSRSNW,XFGEPH
+      grid_position: VFRPJZ,JXVITF
     components:
     - type: Image
       properties: {role: null, vertical_align: center, height: 35, tooltip: '', border: '',
@@ -38,20 +38,6 @@ components:
       name: xy_panel_1
       layout_properties: {grid_position: 'EUYFWY,VXIUTQ'}
       components:
-      - type: Label
-        properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-          visible: true, text: ' Products Details', font_size: 16, font: '', spacing_above: small,
-          icon_align: left, spacing_below: small, italic: false, background: '', bold: true,
-          underline: false, icon: ''}
-        name: label_1_copy
-        layout_properties: {x: 0, y: 10, width: 285}
-      - type: Label
-        properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-          visible: true, text: ' Product ID', font_size: null, font: '', spacing_above: small,
-          icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-          underline: false, icon: ''}
-        name: label_2_copy
-        layout_properties: {x: 0, y: 78, width: 160}
       - type: TextBox
         properties: {role: outlined, align: left, hide_text: false, tooltip: '', placeholder: 'Enter
             your Product Name ', border: '', enabled: true, foreground: '', visible: true,
@@ -328,9 +314,12 @@ components:
         name: text_box_3
         layout_properties: {x: 177, y: 363.8000183105469, width: 232}
       - type: Label
-        properties: {}
-        name: label_1
-        layout_properties: {x: 177, y: 78, width: 212}
+        properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
+          visible: true, text: ' Products Details', font_size: 16, font: '', spacing_above: small,
+          icon_align: left, spacing_below: small, italic: false, background: '', bold: true,
+          underline: false, icon: ''}
+        name: label_1_copy
+        layout_properties: {x: 0, y: 39.850006103515625, width: 663}
 - type: FlowPanel
   properties: {}
   name: navbar_links
