--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -28,6 +28,7 @@ unique_ids:
     log_in_form.Home.admin_teams.view_profile.update_form: '1698899789994986117374399.0231'
     log_in_form.Home.manage_settings: '1698510570970805808175551.8953'
     log_in_form.Home.loan_management.lost_opportunities: '1699007461719824130369412.9452'
+    log_in_form.Home.manage_products.view_product.view_profile: '1700731939370891877540560.8834'
     log_in_form.Home.borrowers.Form7: '1700125149174798260451006.7322'
     log_in_form.Home.manage_cms.update: '1700208899567327850489516.46844'
     log_in_form.Home.admin_teams: '1698750803552258359376441.58456'
